<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DevProfileActivity" android:id="@+id/track">
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/jerry"
            android:id="@+id/imageView2"
            android:contentDescription="@string/me"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/barrier5"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintHorizontal_bias="0.36" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/nameTextView"/>
    <TextView
            android:text="@string/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameTextView"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2" android:layout_marginStart="8dp"/>
    <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/guideline2" android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/track"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:id="@+id/track_text"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            android:layout_marginEnd="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/divider" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/android"
            android:layout_width="wrap_content"
            android:layout_height="14dp"
            android:id="@+id/textView4" app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/divider"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintVertical_bias="0.25" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            android:layout_marginEnd="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/track_text" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/kenya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/editText"
            app:layout_constraintTop_toBottomOf="@+id/textView4"/>
    <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText"
            app:layout_constraintStart_toStartOf="@+id/textView5" android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editText"
            android:text="@string/maila" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/editText2" app:layout_constraintTop_toBottomOf="@+id/textView6"
    />
    <TextView
            android:text="@string/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            android:layout_marginEnd="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/editText2"
            app:layout_constraintStart_toStartOf="@+id/textView7"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/editText2"
            android:text="@string/namba" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView10" app:layout_constraintTop_toBottomOf="@+id/editText"
    />
    <TextView
            android:text="@string/slack_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            android:layout_marginEnd="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="@+id/textView8"/>
    <TextView
            android:text="@string/slack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/editText2"
    />
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline" app:layout_constraintGuide_begin="98dp"
                                                android:orientation="vertical"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline2"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.39"/>
    <androidx.constraintlayout.widget.Barrier android:layout_width="wrap_content" android:layout_height="wrap_content"
                                              android:id="@+id/barrier5" app:barrierDirection="left"/>
</androidx.constraintlayout.widget.ConstraintLayout>