<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/welcome_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/welcome_text" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintBottom_toTopOf="@+id/about_btn" android:layout_marginTop="100dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
    <Button
            android:text="@string/about_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/about_btn"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text" app:layout_constraintEnd_toEndOf="@+id/profile_btn"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/profile_btn"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="100dp"
            android:background="@android:color/holo_orange_light"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
    <Button
            android:text="@string/profile_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profile_btn" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/about_btn"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.288"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:background="@android:color/holo_orange_light"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
</androidx.constraintlayout.widget.ConstraintLayout>